[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahoo-mail-mcp"
version = "0.1.0"
description = "Yahoo Mail remote MCP server for Render deployment"
requires-python = ">=3.10"
dependencies = [
    "imapclient>=3.0",
    "pydantic>=2.0",
    "caldav>=1.3",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "mcp[cli]>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["yahoo_mail"]
